grain bg, fix scrollbar

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -33,3 +33,33 @@ input:-webkit-autofill:focus {
 .katex-display {
   overflow: auto hidden;
 }
+
+body {
+  position: relative;
+  min-height: 100vh;
+  margin: 0;
+  overflow: auto;
+}
+
+.noise-bg::before{
+  z-index: -1;
+  content: "";
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 600'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)'/%3E%3C/svg%3E");
+  background-repeat: repeat;
+  -webkit-background-size: 182px;
+  -moz-background-size: 182px;
+  -o-background-size: 182px;
+  background-size: 182px;
+  opacity: 0.05;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+html {
+  scrollbar-gutter: stable;
+}
